# TP1_Alg2

./: .buildinfo  TP1_Ag2.ipynb  TP1_Alg2.html  genindex.html  intro.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: TP1_Alg2.ipynb
myfirstbook/: _toc.yml
myfirstbook/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
myfirstbook/_build/html/: genindex.html  search.html
myfirstbook/_build/jupyter_execute/: markdown-notebooks.ipynb
notebook/: _toc.yml  color.html  intro.md  timexNum.html  triangulate.html
notebook/_build/.doctrees/: TP1_Alg2.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
notebook/_build/html/: .buildinfo  TP1_Alg2.html  genindex.html  intro.html  notebooks.html  objects.inv  search.html  searchindex.js
notebook/_build/html/_sources/: TP1_Alg2.ipynb
notebook/_build/jupyter_execute/: TP1_Alg2.ipynb  markdown-notebooks.ipynb
