[tool.poetry]
name = "tp1-alg2"
version = "0.1.0"
description = ""
authors = ["IvanGomesCruz <97919328+IvanGomesCruz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^1.0.2"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
polars = "^1.1.0"
altair = "^5.3.0"
plotly = "^5.22.0"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
